Fixed Debian 10 Dockerfile.

--- a/debian-10/Dockerfile
+++ b/debian-10/Dockerfile
@@ -5,10 +5,11 @@ LABEL maintainer="François KUBLER"
 
 ARG DEBIAN_FRONTEND=noninteractive
 
-RUN apt update \
-  && apt upgrade \
-  && apt install -y --no-install-recommends \
+RUN apt-get update -yq \
+  && apt-get dist-upgrade -yq \
+  && apt-get install -yq --no-install-recommends \
      python3 \
-     systemd
+     systemd \
+  && apt-get clean -yq
 
 ENTRYPOINT ["/lib/systemd/systemd"]
