Switch to Debian 10 slim.
Also added a symlink debian-buster --> debian-10.

--- a/debian-10/Dockerfile
+++ b/debian-10/Dockerfile
@@ -1,6 +1,6 @@
 # Build Debian 10 (Buster) image.
 
-FROM debian:10
+FROM debian:10-slim
 LABEL maintainer="François KUBLER"
 
 ARG DEBIAN_FRONTEND=noninteractive
