Fixed Debian 11 base image name.
11-slim doesn't exist (yet ?) on Docker Hub.

--- a/debian-11/Dockerfile
+++ b/debian-11/Dockerfile
@@ -1,6 +1,6 @@
 # Build Debian 11 (Bullseye) image.
 
-FROM debian:11-slim
+FROM debian:bullseye-slim
 LABEL maintainer="François KUBLER"
 
 ARG DEBIAN_FRONTEND=noninteractive
