Added instructions to add a ansible user to the image.

--- a/archlinux/Dockerfile
+++ b/archlinux/Dockerfile
@@ -9,4 +9,16 @@ RUN pacman -Sy --noconfirm \
  && pacman -Sy --noconfirm \
     python
 
+ENV ANSIBLE_USER="ansible"
+ENV SUDO_GROUP="sudoers"
+
+RUN set -xe \
+  && groupadd "${ANSIBLE_USER}" \
+  && groupadd -r "${SUDO_GROUP}" \
+  && useradd -m -g "${ANSIBLE_USER}" "${ANSIBLE_USER}" \
+  && usermod -a -G "${SUDO_GROUP}" "${ANSIBLE_USER}" \
+  && mkdir -p /etc/sudoers.d \
+  && echo "%${SUDO_GROUP} ALL=(ALL) NOPASSWD:ALL" > "/etc/sudoers.d/${SUDO_GROUP}" \
+  && echo "@includedir /etc/sudoers.d" >> "/etc/sudoers"
+
 ENTRYPOINT ["/lib/systemd/systemd"]
