Added instructions to check the sudoers file.

--- a/archlinux/Dockerfile
+++ b/archlinux/Dockerfile
@@ -19,7 +19,8 @@ RUN set -xe \
   && useradd -m -g "${ANSIBLE_USER}" "${ANSIBLE_USER}" \
   && usermod -a -G "${SUDO_GROUP}" "${ANSIBLE_USER}" \
   && mkdir -p /etc/sudoers.d \
-  && echo "%${SUDO_GROUP} ALL=(ALL) NOPASSWD:ALL" > "/etc/sudoers.d/${SUDO_GROUP}" \
-  && echo "@includedir /etc/sudoers.d" >> "/etc/sudoers"
+  && echo "%${SUDO_GROUP} ALL=(ALL:ALL) NOPASSWD: ALL" > "/etc/sudoers.d/${SUDO_GROUP}" \
+  && echo "@includedir /etc/sudoers.d" >> "/etc/sudoers" \
+  && visudo --check --strict --file=/etc/sudoers
 
 ENTRYPOINT ["/lib/systemd/systemd"]
