Removed group allowed to sudo.

--- a/archlinux/Dockerfile
+++ b/archlinux/Dockerfile
@@ -17,9 +17,10 @@ RUN set -xe \
   && groupadd "${ANSIBLE_USER}" \
   && groupadd -r "${SUDO_GROUP}" \
   && useradd -m -g "${ANSIBLE_USER}" "${ANSIBLE_USER}" \
-  && usermod -a -G "${SUDO_GROUP}" "${ANSIBLE_USER}" \
-  && mkdir -p /etc/sudoers.d \
-  && echo "%${SUDO_GROUP} ALL=(ALL:ALL) NOPASSWD: ALL" > "/etc/sudoers.d/${SUDO_GROUP}" \
-  && echo "@includedir /etc/sudoers.d" >> "/etc/sudoers"
+  && echo "${ANSIBLE_USER} ALL=(ALL:ALL) NOPASSWD: ALL" >> "/etc/sudoers"
+#  && usermod -a -G "${SUDO_GROUP}" "${ANSIBLE_USER}" \
+#  && mkdir -p /etc/sudoers.d \
+#  && echo "%${SUDO_GROUP} ALL=(ALL:ALL) NOPASSWD: ALL" > "/etc/sudoers.d/${SUDO_GROUP}" \
+#  && echo "@includedir /etc/sudoers.d" >> "/etc/sudoers"
 
 ENTRYPOINT ["/lib/systemd/systemd"]
